# Hostess7

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FIELD-BROWSER-2026.md  FIELD-DNS-INTERNET.md  Hostess7.sh  Hostess7Monitor.sh  INSTALL-README.md  INSTALL.md  LICENSE  MANIFEST.executables.sha256  MANIFEST.sha256  NEXUS-DESIGN-IMPROVEMENT.md  README-AMMOOS.md  README-HOSTESS7.md  README.md  RELEASE-1.0.0-beta.md  RELEASE-2.0.0-beta3.md  RELEASE-2.0.0-beta4.md  RELEASE-2.0.0-beta5.md  RELEASE-vsync-locker-1.0.0.md  RELEASE.md  ROADMAP-3.0.md  SECURITY.md  STACK-NAV.md  VERSION  VERSION.md  WIKI.md  api-shim.js  app.js  boot.json  brain.html  brilliant_ideas.md  docker-compose.yml  field-chips-core.json  field-combinatorics-engine-lock.json  field-combinatronic-balance-table.json  field-filesystem-overlay.json  genius_shield.sh  index.html  (+23 more)
GIMP-Field/tree/tools/: check-gimp-data.py  compute-svg-viewbox.c  debug-in-build-gimp.py  defcheck.py  extract-vector-icon.sh  flatpak-releases  gen-languages.c  generate-news  generate-welcome-dialog-data.py  gimp-debug-resume.c  gimp-mkenums  gimp-test-clipboard.c  gimppath2svg.py  gimptool.c  in-build-gimp.py  kernelgen.c  lib_bundle.py  make-mac-typelib.py  man2md.py  meson-mkenums.py  meson.build  meson_dist_script.py  meson_install_subdir.py  meson_install_win_debug.py  module-dependencies.py  performance-log-close-tags.py  performance-log-coalesce.py  performance-log-deduce.py  performance-log-expand.py  performance-log-progressive-coalesce.py  performance-log-resolve.py  performance-log-viewer  performance-log-viewer.py  release-stats.sh  run_test_env.sh
Hostess7/: .gitignore  Dockerfile  Hostess7.launch  Hostess7.sh  Hostess7Graphics.sh  LICENSE  README.md  RELEASE-1.0.7h-RTX.md  RELEASE-2.0.7.md  RELEASE-2.0.7e.md  app.js  docker-compose.yml  pyproject.toml  requirements.txt
Hostess7/.devcontainer/: devcontainer.json
Hostess7/.github/workflows/: ci.yml  pages.yml
Hostess7/data/: github-known-hosts.json  hostess7-neural-guardian.json  hostess7-rtx-executables.json
Hostess7/docker/: entrypoint.sh
Hostess7/docs/: API.md  FIELD-STACK.md  HOSTESS7_V33.md  api-shim.js  brain.html  manifest.json  pages-ammoos-scale.css  pages-base.js  pages-runtime.js  runtime.json  status.json
Hostess7/docs/ammoos-update-os/: index.html
Hostess7/docs/api/: ask-seeds.json  brain.json  field-host-desktop.json  field-shell-settings.json  github-secure.json  library-index.json  nexus-c2.json  queen-boot.json  queen-browser.json  queen-page-shields.json  status-full.json  status.json  threat-panel.json  videogames-index.json  world-index.json
Hostess7/docs/assets/: admin-window-shield.js  ammoos-update-os.js  control-panel.css  field-audio-settings.js  field-desktop-scale-propagate.js  field-ellie-fier.js  field-foundation.js  field-host-desktop.js  field-keepass.js  field-launch-explorer.js  field-nav-spine.css  field-popcorn-player.js  field-queen-nav.js  field-shell-context.js  field-shell-dock.js  field-startbar.js  field-vsync-locker.css  field-vsync-locker.js  final-sense-tabs.css  g16-build-output.js  hands-attachments.js  humanoid-data.css  humanoid-data.js  ironclad-bus.js  monitor-jockey.css  nexus-braille-a11y.css  nexus-field-shell.js  nexus-theme.css  nexus-training.js  packet-field-graphics.js  queen-ai-surface.js  queen-icon-engine.js  queen-program-launch.js  thermal-earth.js
Hostess7/docs/compatibility-layers/: index.html
Hostess7/docs/data/: field-stack-doctrine.json  hostess7-old-projects.json
Hostess7/docs/field-desktop/: index.html
Hostess7/docs/field-gimp/: index.html
Hostess7/docs/field-gpu/: index.html
Hostess7/docs/field-keepass/: index.html
Hostess7/docs/field-lang-manuals/: index.html
Hostess7/docs/field-launch-explorer/: index.html
Hostess7/docs/field-library-bookshelf/: index.html
Hostess7/docs/field-modern/: index.html
Hostess7/docs/field-popcorn/: index.html
Hostess7/docs/field-vsync-locker/: index.html
Hostess7/docs/github-brain/: corpus.json  manifest.json  mirror.json
Hostess7/docs/hands-attachments/: index.html
Hostess7/docs/hostess7-book-maker/: index.html
Hostess7/docs/humanoid-data/: index.html
Hostess7/docs/queen/: field-technology-guide.js  queen-bookmarks-flyout.css  queen-branding.js  queen-browser-guide.html  queen-browser-shell.js  queen-chips-catalog.css  queen-chips-catalog.html  queen-chips-cores.html  queen-chips-detail.html  queen-code.html  queen-dashboard-flyout.js  queen-dashboard.html  queen-desktop.css  queen-desktop.js  queen-diagnostic-pane.css  queen-fast-boot.js  queen-field-home.html  queen-files.html  queen-final-ear-manager.html  queen-final-ear-manager.js  queen-final-mouth-manager.js  queen-game-room.js  queen-gnu-terminal-embed.html  queen-hostess7-hub.css  queen-hostess7-hub.html  queen-hostess7-hub.js  queen-media-egress.js  queen-modern.css  queen-nexus-c2.css  queen-nexus-c2.html  queen-os.js  queen-page-inspector.css  queen-popout.html  queen-program-surface.js  queen-system-info.html  queen-thermal-manager.js  view.css  (+1 more)
Hostess7/scripts/: field_alert_posture.py  field_archaeology_truth.py  field_bible_ingest.py  field_brain_memory.py  field_code_catalog.py  field_detective_corpus.py  field_english_catalog.py  field_english_rhetoric.py  field_english_thesaurus.py  field_final_ear_bridge.py  field_hostess_aml_ingress.py  field_hostess_exploring_self.py  field_hostess_sdf_storage.py  field_hostess_self_brief.py  field_hostess_truth_lie_threat.py  field_hostess_wants.py  field_hostess_world_brief.py  field_imagine_corpus.py  field_imagine_learn.py  field_imagine_nexus_teach.py  field_k12_corpus.py  field_langs_data.py  field_legal_catalog.py  field_legal_domains.py  field_library.py  field_library_fetch.py  field_license_status.py  field_lie_methods.py  field_live_video.py  field_medical_infinite.py  field_medical_papers_catalog.py  field_military_security.py  field_monitor_data.py  field_nexus_shield.py  field_online_people_learn.py  field_online_security.py  field_paths.py  field_people_corpus.py  field_people_registry.py  field_queen_redata_teach.py  (+47 more)
(+5977 files in other folders)
