# AmmoOS Image 1.0 — field research rewrite (G16 field_opt)
papers = [
  'bricks.pgm',
  'bricks2.pgm',
  'burlap.pgm',
  'canvas2.pgm',
  'defaultpaper.pgm',
  'marble.pgm',
  'marble2.pgm',
  'stone.pgm',
  'struc.pgm',
]

install_data(
  papers,
  install_dir: gimpdatadir / 'gimpressionist' / 'Paper',
)
